--- a/views/catalogo.ejs
+++ b/views/catalogo.ejs
@@ -1,6 +1,6 @@
 <%- include('starter') %>
 <body>
-    <%- include('banner')%>
+    <%- include('cabecera_catalogo')%>
     <div class="album py-5 bg-light">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
