--- a/views/cabecera_compra.ejs
+++ b/views/cabecera_compra.ejs
@@ -32,7 +32,7 @@
   <div class="shadow-sm" style="background-color:grey">
     <div class="container">
         <p class="d-flex align-items-center" style="color:white;font-size:16px">
-            Listado de ANPs
+            Detalle de la ANP
         </p>
     </div>
 </div>
