--- a/views/catalogo.ejs
+++ b/views/catalogo.ejs
@@ -1,7 +1,8 @@
 <%- include('starter') %>
 <body>
     <%- include('cabecera_catalogo')%>
-    <div class="album py-5 bg-light">
+    <img class="background" src="<%=imagen%>" alt="Aleq">
+    <div class="album py-5">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <%anps.forEach((anp) => {%>
@@ -14,15 +15,17 @@
                         </svg> -->
                         <img src="<%=anp.imagen%>" width="100%" height="225">
                         <div class="card-body">
+                            <h5 class="card-title">
+                                <%=anp.nombre%>
+                            </h5>
                             <p class="card-text">
                                 "This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer."
                             </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" style="background-color:#e1cc58;color:white">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" style="background-color:#e1cc58;color:white">Edit</button>
+                                    <a class="btn btn-primary" href="/buy/<%=anp.nombre%>?precio=<%=anp.precio%>&img=<%=anp.imagen%>" role="button" style="background-color:#e1cc58;color:white">COMPRAR</a>
                                 </div>
-                                <small class="text-muted">9 mins</small>
+                                <small class="text-muted"><%=anp.precio%> PEN</small>
                             </div>
                         </div>
                     </div>
