--- a/views/starter.ejs
+++ b/views/starter.ejs
@@ -16,6 +16,17 @@
     
     
         <style>
+          img.background {
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+            -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+            filter: blur(5px);
+            opacity:0.2;
+            }
           .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
