--- a/views/comprar.ejs
+++ b/views/comprar.ejs
@@ -12,18 +12,23 @@
                 <div class="card-body">
                   <h5 class="card-title"><%=nombre%></h5>
                   <p class="card-text"><%=descripcion%></p>
-                  <div class="row g-0 d-flex justify-content-between align-items-center">
-                    <div class="col-3 col-md-4 p-3" width="12px">
-                        <div class="input-group">
-                            <input type="number" min="1" value="1" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1" id="ticket">
+                  <div class="g-0 d-flex justify-content-between align-items-center">
+                    <form method="post" action="/order/<%=nombre%>/<%=precio%>">
+                        <div class="row">
+                            <div class="col">
+                                <input name="tickets" type="number" min="1" value="1" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1" id="ticket">
+                            </div>
+                            <div class="col">
+                                <p class="card-text"><small class="text-muted">Precio: <span id="precio"><%=precio%></span> PEN</small></p>
+                            </div>
+                            <div class="col">
+                            <p class="card-text">Precio total: <span id="importe"><%=precio%></span> PEN</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm-3 col-md-4">
-                        <p class="card-text"><small class="text-muted">Precio: <span id="precio"><%=precio%></span> PEN</small></p>
-                    </div>
-                    <div class="col-3">
-                        <p class="card-text">Precio total: <span id="importe"><%=precio%></span> PEN</p>
-                    </div>
+                        <div class="p-3">
+                            <button class="btn btn-primary" style="background-color:#e1cc58;color:white" type="submit">COMPRAR</button>
+                        </div>
+                    </form>
                 </div>
                 </div>
               </div>
