--- a/views/catalogo.ejs
+++ b/views/catalogo.ejs
@@ -23,7 +23,7 @@
                             </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-primary" href="/buy/<%=anp.nombre%>?precio=<%=anp.precio%>&img=<%=anp.imagen%>" role="button" style="background-color:#e1cc58;color:white">COMPRAR</a>
+                                    <a class="btn btn-primary custom-btn" href="/buy/<%=anp.nombre%>?precio=<%=anp.precio%>&img=<%=anp.imagen%>" role="button" >COMPRAR</a>
                                 </div>
                                 <small class="text-muted"><%=anp.precio%> PEN</small>
                             </div>
