--- a/views/comprar.ejs
+++ b/views/comprar.ejs
@@ -26,7 +26,7 @@
                             </div>
                         </div>
                         <div class="p-3">
-                            <button class="btn btn-primary" style="background-color:#e1cc58;color:white" type="submit">COMPRAR</button>
+                            <button class="btn btn-primary custom-btn" type="submit">COMPRAR</button>
                         </div>
                     </form>
                 </div>
