--- a/views/comprar.ejs
+++ b/views/comprar.ejs
@@ -22,8 +22,12 @@
                                 <p class="card-text"><small class="text-muted">Precio: <span id="precio"><%=precio%></span> PEN</small></p>
                             </div>
                             <div class="col">
-                            <p class="card-text">Precio total: <span id="importe"><%=precio%></span> PEN</p>
+                                <p class="card-text">Precio total: <span id="importe"><%=precio%></span> PEN</p>
                             </div>
+                        </div>
+                        <div class="row-my-5 p-auto m-auto ">
+                            <label>Correo(opcional):</label>
+                            <input name="correo" type="text" class="form-control m-auto" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1" id="correo">
                         </div>
                         <div class="p-3">
                             <button class="btn btn-primary custom-btn" type="submit">COMPRAR</button>
