--- a/views/comprar.ejs
+++ b/views/comprar.ejs
@@ -23,6 +23,7 @@
                             </div>
                             <div class="col">
                                 <p class="card-text">Precio total: <span id="importe"><%=precio%></span> PEN</p>
+                                <input name="importe" type="number" hidden= 'true' class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1" id="importehtml">
                             </div>
                         </div>
                         <div class="row-my-5 p-auto m-auto ">
