--- a/views/catalogo.ejs
+++ b/views/catalogo.ejs
@@ -19,7 +19,7 @@
                                 <%=anp.nombre%>
                             </h5>
                             <p class="card-text">
-                                "This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer."
+                                <%=anp.descripcion%>
                             </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
